一些链接之类的小问题

--- a/src/main/webapp/WEB-INF/views/grade/backpages/class-list.html
+++ b/src/main/webapp/WEB-INF/views/grade/backpages/class-list.html
@@ -31,7 +31,7 @@
                                 </li>
 
                                 <li>
-                                    <a href="login.html">退出</a>
+                                    <a href="/StuSystem/backTeacher/logout">退出</a>
                                 </li>
                             </ul>
                         </li>
@@ -48,7 +48,7 @@
         <div class="menu_dropdown bk_2">
             <dl id="course">
                 <dt>
-                    <a href="/StuSystem/backClass/list">
+                    <a href="/StuSystem/backCourse/list">
                         <i class="Hui-iconfont">&#xe616;</i> 课程管理
                     </a>
                 </dt>
