--- a/src/main/webapp/WEB-INF/views/grade/backpages/change-password.html
+++ b/src/main/webapp/WEB-INF/views/grade/backpages/change-password.html
@@ -26,11 +26,11 @@
 							</a>
 							<ul class="dropDown-menu menu radius box-shadow">
 								<li>
-									<a href="change-password.html">修改密码</a>
+									<a href="/StuSystem/backTeacher/toChangePassword">修改密码</a>
 								</li>
 
 								<li>
-									<a href="login.html">退出</a>
+									<a href="/StuSystem/backTeacher/logout">退出</a>
 								</li>
 							</ul>
 						</li>
