--- a/src/main/webapp/WEB-INF/views/grade/backpages/grade-list.html
+++ b/src/main/webapp/WEB-INF/views/grade/backpages/grade-list.html
@@ -30,7 +30,7 @@
                                 </li>
 
                                 <li>
-                                    <a href="login.html">退出</a>
+                                    <a href="/StuSystem/backTeacher/logout">退出</a>
                                 </li>
                             </ul>
                         </li>
