--- a/src/main/webapp/WEB-INF/views/grade/frontpages/grade-list.html
+++ b/src/main/webapp/WEB-INF/views/grade/frontpages/grade-list.html
@@ -78,9 +78,9 @@
 
                 <table class="table table-border table-bordered table-striped">
                     <thead class="text-c">
-                        <tr>
-                            <th>课程名称</th>
-                            <th>分数</th>
+                        <tr style="height: 50px;">
+                            <th style="color: #5A738E; line-height: 32px; font-size: 15px">课程名称</th>
+                            <th style="color: #5A738E; line-height: 32px; font-size: 15px">分数</th>
                         </tr>
                     </thead>
                     <tbody class="text-c">
