--- a/src/main/webapp/WEB-INF/views/grade/backpages/change-password.html
+++ b/src/main/webapp/WEB-INF/views/grade/backpages/change-password.html
@@ -92,16 +92,16 @@
 						<label class="form-label col-xs-4 col-sm-3">
 							<span class="c-red">*</span>新密码：</label>
 						<div class="formControls col-xs-8 col-sm-9">
-							<input type="password" class="input-text" autocomplete="off" placeholder="不修改请留空" name="newpassword" id="newpassword">
+							<input type="password" class="input-text" autocomplete="off" placeholder="请填写新密码" name="newpassword" id="newpassword">
 						</div>
 					</div>
-					<!--<div class="row cl">-->
-						<!--<label class="form-label col-xs-4 col-sm-3">-->
-							<!--<span class="c-red">*</span>确认密码：</label>-->
-						<!--<div class="formControls col-xs-8 col-sm-9">-->
-							<!--<input type="password" class="input-text" autocomplete="off" placeholder="不修改请留空" name="newpassword2" id="new-password2">-->
-						<!--</div>-->
-					<!--</div>-->
+					<div class="row cl">
+						<label class="form-label col-xs-4 col-sm-3">
+							<span class="c-red">*</span>确认密码：</label>
+						<div class="formControls col-xs-8 col-sm-9">
+							<input type="password" class="input-text" autocomplete="off" placeholder="请再次输入新密码" name="newpassword2" id="new-password2">
+						</div>
+					</div>
 					<div class="row cl">
 						<div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-3">
 							<input class="btn btn-primary radius" type="button" value="&nbsp;&nbsp;保存&nbsp;&nbsp;" id="submit">
