--- a/src/main/webapp/WEB-INF/views/grade/frontpages/change-password.html
+++ b/src/main/webapp/WEB-INF/views/grade/frontpages/change-password.html
@@ -73,7 +73,7 @@
         <i class="Hui-iconfont"></i>
         <a href="/StuSystem/elective/toElective" class="maincolor">首页</a>
         <span class="c-999 en">&gt;</span>
-        <a href="/StuSystem/elective/toElective" class="maincolor">我要选课</a>
+        <a href="/StuSystem/elective/toElective" class="maincolor">选修课程</a>
     </nav>
     <div class="Hui-article">
         <article class="cl pd-20" style="width: 1000px;margin: 0 auto;">
