--- a/src/main/webapp/WEB-INF/views/grade/frontpages/course-list.html
+++ b/src/main/webapp/WEB-INF/views/grade/frontpages/course-list.html
@@ -50,7 +50,7 @@
 			<dl id="course">
 				<dt>
 					<a href="/StuSystem/elective/toElective">
-						<i class="Hui-iconfont">&#xe616;</i> 我要选课
+						<i class="Hui-iconfont">&#xe616;</i> 选修课程
 					</a>
 				</dt>
 			</dl>
@@ -79,9 +79,9 @@
             <article class="cl pd-20">
                 <table class="table table-border table-bordered table-striped">
                     <thead class="text-c">
-                        <tr>
-                            <th>课程名称</th>
-                            <th>操作</th>
+                        <tr style="height: 50px;">
+                            <th style="color: #5A738E; line-height: 32px; font-size: 15px">课程名称</th>
+                            <th style="color: #5A738E; line-height: 32px; font-size: 15px">操作</th>
                         </tr>
                     </thead>
                     <tbody class="text-c">
