--- a/src/main/webapp/WEB-INF/views/grade/frontpages/index.html
+++ b/src/main/webapp/WEB-INF/views/grade/frontpages/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="../static/back/css/H-ui.min.css" />
 	<link rel="stylesheet" type="text/css" href="../static/back/css/H-ui.admin.css" />
 	<link rel="stylesheet" type="text/css" href="../static/back/css/iconfont.css" />
-	<link rel="stylesheet" type="text/css" href="../static/back/skin/green/skin.css" id="skin" />
+	<link rel="stylesheet" type="text/css" href="../static/back/skin/default/skin.css" id="skin" />
 	<link rel="stylesheet" type="text/css" href="../static/back/css/style.css" />
 	lll
 
@@ -19,12 +19,11 @@
 	<header class="navbar-wrapper">
 		<div class="navbar navbar-fixed-top">
 			<div class="container-fluid cl">
-				<a class="logo navbar-logo f-l mr-10 hidden-xs" href="index.html">学生成绩查询选课系统</a>
+				<a class="logo navbar-logo f-l mr-10 hidden-xs" href="/StuSystem/backTeacher/toIndex">学生成绩管理系统</a>
 				<nav id="Hui-userbar" class="nav navbar-nav navbar-userbar hidden-xs">
 					<ul class="cl">
 						<li class="dropDown dropDown_hover">
-							<a href="#" class="dropDown_A">admin
-								<i class="Hui-iconfont">&#xe6d5;</i>
+							<a href="#" class="dropDown_A" id="name">
 							</a>
 							<ul class="dropDown-menu menu radius box-shadow">
 								<li>
@@ -50,7 +49,7 @@
 			<dl id="course">
 				<dt>
 					<a href="course-list.html">
-						<i class="Hui-iconfont">&#xe616;</i> 我要选课
+						<i class="Hui-iconfont">&#xe616;</i> 选修课程
 					</a>
 				</dt>
 			</dl>
