--- a/src/main/webapp/static/back/css/style.css
+++ b/src/main/webapp/static/back/css/style.css
@@ -19,3 +19,30 @@ table {
 .add {
     margin-top: 20px;
 }
+
+/* login */
+.login-bg{background: url(../images/bg.png) no-repeat center center fixed;background-size:100% 100%;}
+#login-box {position: fixed;width: 100%;margin: 0 auto;}
+.login-box {width: 450px;height: 330px;margin: 10% auto;background-color: rgba(255, 255, 255, 0.407843);border-radius: 10px;color: #666;}
+.login-box header {height: 65px;padding: 10px;border-bottom: 1px solid aliceblue;}
+.login-box header h1 {text-align: center;font-size: 25px;line-height: 40px;}
+.login-box .login-main {height: 185px;padding: 30px 90px 0;}
+.login-main .layui-form-item {position: relative;}
+.login-main .layui-form-item .login-icon {position: absolute;color: #ccc;top: 10px;left: 10px;}
+.login-box footer {height: 35px;padding: 10px 10px 0 10px;}
+.login-box footer p {line-height: 35px;text-align: center;}
+.login-remember {line-height: 38px;}
+.login-remember .layui-form-switch {margin-top: 0px;}
+.login-code-box {position: relative;padding:10px;}
+.login-code-box input{position: absolute;width: 100px;}
+.login-code-box img{cursor: pointer;position: absolute;left: 115px;height: 38px;}
+.submit {
+    display: block;
+    width: 320px;
+    background: #33AECC;
+    border: none;
+    border-radius: 2px;
+    text-align: center;
+    color: #fff;
+    padding-left: 10px;
+}
