--- a/src/main/webapp/static/back/skin/green/skin.css
+++ b/src/main/webapp/static/back/skin/green/skin.css
@@ -2,7 +2,7 @@
 /* 绿色 */
 /*全站默认字体颜色*/
 a{color:#333}a:hover,a:focus,.maincolor,.maincolor a{color:#06c}
-.navbar{ background:#19a97b}/*顶部导航*/
+.navbar{ background: rgb(51, 103, 214)}/*顶部导航*/
 	.navbar-logo,.navbar-logo-m,.navbar-slogan,.navbar-userbar{color:#fff}/*logo 及 用户信息文字颜色*/
 	.navbar-logo:hover,.navbar-logo-m:hover{color:#fff;text-decoration: none}
 	
